# OoTMM

./: .editorconfig  .env.build.production  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.ci  Dockerfile.devcontainer  Gemfile  LICENSE  Makefile  README.md  babel.config.js  deploy.sh  devcontainer-setup.sh  docker-compose.yml  docker-entrypoint.sh  env.sh  install-deps.sh  jest.config.js  log.S  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  setup.sh  tsconfig.json  webpack.config.js
src/: CMakeLists.txt  Makefile  link.ld.in  link_custom_object.ld  link_mm.in  link_oot.in
src/codex/: CMakeLists.txt  codex.ld  codex.s
src/common/: Item_Custom.c  alloc.c  cow.c  csmc.c  ctx.c  dma.S  dma.c  dpad.c  draw.c  entrance.c  flash.c  gi.c  hint.c  init.c  item.c  item_mm.c  item_oot.c  libc.c  loader.S  menu.c  object.c  ocarina.c  override.c  progressive.c  progressive_mm.c  progressive_oot.c  save.c  shader.S  shader.c  shaders_mm.inc  shaders_oot.inc  shop.c  special.c  switch.S  switch.c  system.S  system.c  text.c  util.c  warp.c
src/common/actors/: Custom_Warp.S  Custom_Warp.c
src/common/data/: shaders.inc
src/common/objects/: gi_nut.S  gi_stick.S
src/loader/: Makefile  loader.S  loader_oot.S  loader_oot.ld
src/mm/: actors.S  actors.c  dma.S  dummy.c  gi.S  gi.c  hooks.S  item_effect.c  items.S  items.c  memory.S  misc.S  misc.c  ocarina.c  play.c  save.S  save.c  shader.c  shaders.S  shop.c  switch.c  text.c  trade.c
src/mm/actors/: Door_Warp1.S  En_Box.c  En_Elfgrp.c  En_GirlA.S  En_GirlA.c  En_Mnk.S  En_Mnk.c  En_Sob1.S  En_Sob1.c  Item_Custom.S  Player.S  Player.c
src/mm/hooks/: audio.S
src/mm/objects/: box.S  gi_melody.S
src/objects/: object_gi_sword_2.c
src/oot/: actors.S  actors.c  audio.c  cutscenes.S  dma.S  doors.c  flash.S  gi.S  gi.c  hooks.S  init.c  item_effect.c  items.S  items.c  loader.S  messages.c  misc.S  mq.c  ocarina.S  ocarina.c  room.c  save.S  save.c  save_util.c  shader.S  shader.c  shop.c  switch.S  switch.c  text.c  title.S  trade.c
src/payload/: Makefile  flash.c  libc.c  payload.S  payload.ld
src/tools/: CMakeLists.txt  unyaz0.cpp
(+829 files in other folders)
